test/Harper/Tests/Good/Scoping_While.har
main :: Integer;
main = {
  (n :: Integer) = 42;
  var (i :: Integer) = 0;
  var (result :: Integer) = 0;

  while i < 100 {
    result += n;
    i += 1;
    (n :: Integer) = 1;
  }

  return result;
};