test/Harper/Tests/Bad/issue029_currentWithoutNext.har
iterate :: Iterator Integer;
iterate = {
    var (i :: Integer) = 0;
    while true {
        yield i;
        i += 1;
    }
};

main :: Integer;
main = iterate.current;